# cpp-cic

./: .gitignore  CMakeLists.txt  COPYING
cic-vm/: CMakeCache.txt  CMakeLists.txt  Makefile  MinerAux.h  cmake_install.cmake  main.cpp
cic-vm/_3rdParty/Hunter/: install-root-dir
cic-vm/_3rdParty/Hunter/config-id/: config.cmake
cic-vm/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
cic-vm/cic-vm/: Makefile  cmake_install.cmake
cic-vm/libcic/: Makefile  cmake_install.cmake
cic-vm/libciccore/: Makefile  cmake_install.cmake
cic-vm/libcvm/: Makefile  cmake_install.cmake
cmake/: BuildInfo.cmake  CMakeCache.txt
cmake/Hunter/: config.cmake
cmake/_3rdParty/Hunter/toolchain/: toolchain.info
cmake/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
json_spirit/: CMakeLists.txt
libcic/: Account.cpp  Account.h  BasicAuthority.cpp  BasicAuthority.h  Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  BlockDetails.cpp  BlockDetails.h  BlockQueue.cpp  BlockQueue.h  CMakeLists.txt  ChainParams.cpp  ChainParams.h  Client.cpp  Client.h  ClientBase.cpp  ClientBase.h  ClientTest.cpp  ClientTest.h  CodeSizeCache.h  CommonNet.cpp  CommonNet.h  Defaults.cpp  Defaults.h  EthereumHost.cpp  EthereumHost.h  EthereumPeer.cpp  EthereumPeer.h  Executive.cpp  Executive.h  ExtVM.cpp  ExtVM.h  GasPricer.cpp  GasPricer.h  GenericFarm.h  GenericMiner.h  GenesisInfo.cpp  GenesisInfo.h  (+18 more)
libcicore/: BlockHeader.cpp  BlockHeader.h  CMakeLists.txt  ChainOperationParams.cpp  ChainOperationParams.h  Common.cpp  Common.h  CommonJS.cpp  CommonJS.h  EVMSchedule.h  Exceptions.h  KeyManager.cpp  KeyManager.h  LogEntry.cpp  LogEntry.h  Precompiled.cpp  Precompiled.h  SealEngine.cpp  SealEngine.h  TransactionBase.cpp  TransactionBase.h  libcicore.cpp  libcicore.h
libcihashseal/: CMakeLists.txt  Ethash.cpp  Ethash.h  EthashCPUMiner.cpp  EthashCPUMiner.h  EthashClient.cpp  EthashClient.h  EthashProofOfWork.cpp  EthashProofOfWork.h  GenesisInfo.cpp  GenesisInfo.h  libcihashseal.cpp  libcihashseal.h
libcihashseal/genesis/: mainNetwork.cpp
libcnet/: CMakeLists.txt  Capability.cpp  Capability.h  Common.cpp  Common.h  Host.cpp  Host.h  HostCapability.cpp  HostCapability.h  Network.cpp  Network.h  RLPXSocket.h  Session.cpp  Session.h  libcnet.cpp  libcnet.h
libcolcore/: Address.cpp  Address.h  Assertions.h  Base64.cpp  Base64.h  CMakeLists.txt  Common.cpp  Common.h  CommonData.cpp  CommonData.h  CommonIO.cpp  CommonIO.h  CommonJS.cpp  CommonJS.h  DBImpl.h  Exceptions.h  FileSystem.cpp  FileSystem.h  FixedHash.cpp  FixedHash.h  Guards.h  JsonUtils.cpp  JsonUtils.h  LevelDB.cpp  LevelDB.h  Log.cpp  Log.h  MemoryDB.cpp  MemoryDB.h  OverlayDB.cpp  OverlayDB.h  RLP.cpp  RLP.h  SHA3.cpp  SHA3.h  Terminal.h  TrieCommon.cpp  TrieCommon.h  TrieDB.h  TrieHash.cpp  (+8 more)
libcolcrypto/: AES.cpp  AES.h  CMakeLists.txt  Common.cpp  Common.h  CryptoPP.cpp  CryptoPP.h  Exceptions.h  Hash.cpp  Hash.h  LibSnark.cpp  LibSnark.h  SecretStore.cpp  SecretStore.h  libcolcrypto.cpp  libcolcrypto.h
libcvm/: CMakeLists.txt  ExtVMFace.cpp  ExtVMFace.h  Instruction.cpp  Instruction.h  LegacyVM.cpp  LegacyVM.h  LegacyVMCalls.cpp  LegacyVMOpt.cpp  VMConfig.h  VMFace.h  VMFactory.cpp  VMFactory.h  interpreter.h  libcvm.cpp  libcvm.h
libdummy/: CMakeLists.txt  libdummy.cpp  libdummy.h
libweb3agent/: CMakeLists.txt  WebThree.cpp  WebThree.h  libweb3agent.cpp  libweb3agent.h
libweb3crpc/: AccountHolder.cpp  AccountHolder.h  AdminEth.cpp  AdminEth.h  AdminEthFace.h  AdminNet.cpp  AdminNet.h  AdminNetFace.h  CMakeLists.txt  Debug.cpp  Debug.h  DebugFace.h  Eth.cpp  Eth.h  EthFace.h  IpcServer.h  IpcServerBase.cpp  IpcServerBase.h  JsonHelper_cic.cpp  JsonHelper_cic.h  JsonHelper_cnet.cpp  JsonHelper_cnet.h  JsonHelper_col.cpp  JsonHelper_col.h  JsonHelper_crpc.cpp  JsonHelper_crpc.h  ModularServer.h  Net.cpp  Net.h  NetFace.h  Personal.cpp  Personal.h  PersonalFace.h  SessionManager.cpp  SessionManager.h  StandardTrace.cpp  StandardTrace.h  Test.cpp  Test.h  TestFace.h  (+7 more)
scripts/: jsonrpcproxy.py
